--- a/style.css
+++ b/style.css
@@ -1,11 +1,5 @@
 /* -------  General Styles ------- */
 
-html,
-body {
-  overflow-x: hidden;
-  margin: 0;
-}
-
 body {
   font-family: "Lato", sans-serif;
   color: #6b1a22;
@@ -38,7 +32,7 @@ section.alternate-background {
 }
 
 main img {
-  width: 100px;
+  width: 100%;
 }
 
 /* ---  Groups & Items --- */
@@ -67,20 +61,15 @@ header {
 
 .logo {
   font-family: "Tangerine", cursive;
-  font-size: 50px;
-  margin-top: 20px;
+  font-size: 72px;
   color: #ecdbc9;
-}
-
-header nav {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
 }
 
 header nav ul {
   display: flex;
-  padding-left: 0px;
+  flex-direction: row;
+  justify-content: center;
+  padding-bottom: 10px;
 }
 
 header nav ul li {
@@ -99,30 +88,25 @@ header nav ul li a:hover {
 }
 
 /* -------  Join Form ------- */
-#form-img {
-  width: 100%;
-}
-
 form {
   border: 2px solid #6b1a22;
-  padding: 5px;
+  padding: 10px;
 }
 
-.form-field {
+form div {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  margin-top: 10px;
 }
 
 form label {
   font-weight: bold;
-  font-size: 15px;
 }
 
 form select,
 form input {
   margin-bottom: 20px;
-  width: 100px;
+  width: 180px;
 }
 
 form button {
@@ -132,30 +116,6 @@ form button {
   font-size: 24px;
   padding: 15px;
   width: 100%;
-}
-
-/* ------ About Image ------ */
-
-.about-img {
-  width: 100%;
-  margin-bottom: 25px;
-}
-
-/* ------ Download Image -------*/
-.download-img {
-  width: 100%;
-}
-
-/* ------ Blog Images ------*/
-
-.alternate-background img {
-  margin-top: 20px;
-  width: 100%;
-}
-
-/* ----- H2 ----- */
-.alternate-background h2 {
-  margin-top: 10px;
 }
 
 /* -------  Footer ------- */
